--- a/package.json
+++ b/package.json
@@ -1,53 +1,67 @@
 {
-  "version": "0.1.0",
-  "license": "MIT",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
-  "files": [
-    "dist",
-    "src"
-  ],
-  "engines": {
-    "node": ">=10"
-  },
-  "scripts": {
-    "start": "tsdx watch",
-    "build": "tsdx build",
-    "test": "tsdx test",
-    "lint": "eslint --ext .js,.ts .",
-    "prepare": "tsdx build",
-    "size": "size-limit",
-    "analyze": "size-limit --why"
-  },
-  "peerDependencies": {},
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint"
-    }
-  },
-  "name": "dynamic-dev-server-port",
-  "author": "Brion Mario",
-  "module": "dist/dynamic-dev-server-port.esm.js",
-  "size-limit": [
-    {
-      "path": "dist/dynamic-dev-server-port.cjs.production.min.js",
-      "limit": "10 KB"
+    "name": "dev-server-ports",
+    "description": "Gracefully pick a port number for the dev server",
+    "version": "0.1.0",
+    "license": "MIT",
+    "author": "Brion Mario",
+    "keywords": [
+        "dev-server-ports",
+        "dynamic-port",
+        "webpack-dynamic-port",
+        "port-finder"
+    ],
+    "homepage": "https://github.com/brionmario/dev-server-ports#readme",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/brionmario/dev-server-ports"
     },
-    {
-      "path": "dist/dynamic-dev-server-port.esm.js",
-      "limit": "10 KB"
+    "bugs": {
+        "url": "https://github.com/brionmario/dev-server-ports/issues"
+    },
+    "main": "dist/index.js",
+    "typings": "dist/index.d.ts",
+    "files": [
+        "dist",
+        "src"
+    ],
+    "engines": {
+        "node": ">=10"
+    },
+    "scripts": {
+        "start": "tsdx watch",
+        "build": "tsdx build",
+        "test": "tsdx test",
+        "lint": "eslint --ext .js,.ts .",
+        "prepare": "tsdx build",
+        "size": "size-limit",
+        "analyze": "size-limit --why"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "npm run lint"
+        }
+    },
+    "module": "dist/dynamic-dev-server-port.esm.js",
+    "size-limit": [
+        {
+            "path": "dist/dynamic-dev-server-port.cjs.production.min.js",
+            "limit": "10 KB"
+        },
+        {
+            "path": "dist/dynamic-dev-server-port.esm.js",
+            "limit": "10 KB"
+        }
+    ],
+    "devDependencies": {
+        "@size-limit/preset-small-lib": "^7.0.8",
+        "@typescript-eslint/eslint-plugin": "^5.16.0",
+        "@typescript-eslint/parser": "^5.16.0",
+        "eslint": "^8.12.0",
+        "eslint-plugin-import": "^2.25.4",
+        "husky": "^7.0.4",
+        "size-limit": "^7.0.8",
+        "tsdx": "^0.14.1",
+        "tslib": "^2.3.1",
+        "typescript": "^4.6.3"
     }
-  ],
-  "devDependencies": {
-    "@size-limit/preset-small-lib": "^7.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.16.0",
-    "@typescript-eslint/parser": "^5.16.0",
-    "eslint": "^8.12.0",
-    "eslint-plugin-import": "^2.25.4",
-    "husky": "^7.0.4",
-    "size-limit": "^7.0.8",
-    "tsdx": "^0.14.1",
-    "tslib": "^2.3.1",
-    "typescript": "^4.6.3"
-  }
 }
