--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     ],
     "devDependencies": {
         "@size-limit/preset-small-lib": "^7.0.8",
+        "@types/detect-port": "^1.3.2",
+        "@types/inquirer": "^8.2.0",
         "@typescript-eslint/eslint-plugin": "^5.16.0",
         "@typescript-eslint/parser": "^5.16.0",
         "eslint": "^8.12.0",
@@ -63,5 +65,11 @@
         "tsdx": "^0.14.1",
         "tslib": "^2.3.1",
         "typescript": "^4.6.3"
+    },
+    "dependencies": {
+        "chalk": "^4.1.2",
+        "detect-port": "^1.3.0",
+        "inquirer": "^8.2.2",
+        "is-root": "^2.1.0"
     }
 }
