--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
         "cz-conventional-changelog": "^3.3.0",
         "eslint": "^8.12.0",
         "eslint-plugin-import": "^2.25.4",
+        "eslint-plugin-tsdoc": "^0.2.14",
         "husky": "^7.0.4",
         "size-limit": "^7.0.8",
         "tsdx": "^0.14.1",
