--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
         "prepare": "tsdx build",
         "size": "size-limit",
         "start": "tsdx watch",
-        "test": "tsdx test"
+        "test": "tsdx test",
+        "typecheck": "tsc"
     },
     "husky": {
         "hooks": {
