--- a/.github/workflows/bundler-size-analyzer.yml
+++ b/.github/workflows/bundler-size-analyzer.yml
@@ -1,7 +1,13 @@
-name: size
-on: [pull_request]
+# This workflow will analize the cost comparison of your library on every pull request using `size-limit`.
+
+name: Bundle Size Analyzer
+
+on:
+  pull_request:
+  workflow_dispatch:
+
 jobs:
-  size:
+  analyze:
     runs-on: ubuntu-latest
     env:
       CI_JOB_NUMBER: 1
