--- a/.github/workflows/pr-builder.yml
+++ b/.github/workflows/pr-builder.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   lint:
-    name: ⬣ ESLint (STATIC ANALYSIS)
+    name: 🍀 ESLint (STATIC ANALYSIS)
     runs-on: ubuntu-latest
     strategy:
       matrix:
