--- a/package.json
+++ b/package.json
@@ -44,17 +44,7 @@
             "prepare-commit-msg": "exec < /dev/tty && npx cz --hook || true"
         }
     },
-    "module": "dist/dynamic-dev-server-port.esm.js",
-    "size-limit": [
-        {
-            "path": "dist/dynamic-dev-server-port.cjs.production.min.js",
-            "limit": "10 KB"
-        },
-        {
-            "path": "dist/dynamic-dev-server-port.esm.js",
-            "limit": "10 KB"
-        }
-    ],
+    "module": "dist/dev-server-ports.esm.js",
     "devDependencies": {
         "@size-limit/preset-small-lib": "^7.0.8",
         "@types/detect-port": "^1.3.2",
