--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "cm": "cz",
         "lint": "eslint --ext .js,.ts .",
         "prepare": "tsdx build",
+        "semantic-release": "semantic-release",
         "start": "tsdx watch",
         "test": "tsdx test",
         "typecheck": "tsc"
@@ -54,6 +55,7 @@
         "eslint-plugin-import": "^2.25.4",
         "eslint-plugin-tsdoc": "^0.2.14",
         "husky": "^7.0.4",
+        "semantic-release": "^19.0.2",
         "tsdx": "^0.14.1",
         "tslib": "^2.3.1",
         "typescript": "^4.6.3"
