--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     },
     "scripts": {
         "build": "tsdx build",
+        "contributors:add": "all-contributors add",
+        "contributors:generate": "all-contributors generate",
         "cm": "cz",
         "lint": "eslint --ext .js,.ts .",
         "prepare": "tsdx build",
@@ -49,6 +51,7 @@
         "@types/inquirer": "^8.2.0",
         "@typescript-eslint/eslint-plugin": "^5.16.0",
         "@typescript-eslint/parser": "^5.16.0",
+        "all-contributors-cli": "^6.20.0",
         "commitizen": "^4.2.4",
         "cz-conventional-changelog": "^3.3.0",
         "eslint": "^8.12.0",
