--- a/.github/workflows/pr-builder.yml
+++ b/.github/workflows/pr-builder.yml
@@ -85,6 +85,7 @@ jobs:
   test:
     name: 👾 Unit Test (TESTING)
     needs: [ lint, typecheck ]
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [ "12.x", "14.x" ]
