--- a/.github/workflows/pr-builder.yml
+++ b/.github/workflows/pr-builder.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [ 12.x ]
+        node-version: [ 14.x ]
     steps:
       - name: ⬇️ Checkout
         id: checkout
@@ -52,7 +52,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [ 12.x ]
+        node-version: [ 14.x ]
     steps:
       - name: ⬇️ Checkout
         id: checkout
@@ -88,7 +88,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [ "12.x", "14.x" ]
+        node-version: [ "12.x", "14.x", "16.x" ]
     steps:
       - name: ⬇️ Checkout
         id: checkout
@@ -125,7 +125,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [ "12.x", "14.x" ]
+        node-version: [ "12.x", "14.x", "16.x" ]
         os: [ ubuntu-latest, windows-latest, macOS-latest ]
     steps:
       - name: ⬇️ Checkout
