--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [ "12.x" ]
+        node-version: [ "12.x", "14.x", "16.x" ]
     steps:
       - name: ⬇️ Checkout
         id: checkout
