--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   // see https://www.typescriptlang.org/tsconfig to better understand tsconfigs
   "include": ["src", "types"],
   "compilerOptions": {
+    // Enable experimental decorators feature.
+    "experimentalDecorators": true,
     "module": "esnext",
     "lib": ["dom", "esnext"],
     "importHelpers": true,
