--- a/.releaserc
+++ b/.releaserc
@@ -1,3 +1,19 @@
 {
-  "branches": [ "main" ]
+  "branches": [ "main" ],
+  "plugins": [
+    "@semantic-release/commit-analyzer",
+    "@semantic-release/release-notes-generator",
+    [
+      "@semantic-release/changelog",
+      {
+        "changelogFile": "CHANGELOG.md"
+      }
+    ],
+    [
+      "@semantic-release/git",
+      {
+        "assets": ["CHANGELOG.md"]
+      }
+    ]
+  ]
 }
