--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "dev-server-ports",
     "description": "Gracefully pick a port number for the dev server",
-    "version": "0.1.0",
+    "version": "0.0.0-semantically-released",
     "license": "MIT",
     "author": "Brion Mario",
     "keywords": [
@@ -47,6 +47,7 @@
     },
     "module": "dist/dev-server-ports.esm.js",
     "devDependencies": {
+        "@semantic-release/changelog": "^6.0.1",
         "@types/detect-port": "^1.3.2",
         "@types/inquirer": "^8.2.0",
         "@typescript-eslint/eslint-plugin": "^5.16.0",
