--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,6 @@
 # This workflow will build PRs submitted to the main branch.
 
-name: Publish
+name: 📦 Release
 
 on:
   push:
@@ -12,12 +12,14 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
-    name: 🚧 Build
-    runs-on: ubuntu-latest
+  release:
+    name: 📦 Release
+    if: ${{ github.ref == 'refs/heads/main' }}
     strategy:
       matrix:
-        node-version: [ "12.x", "14.x", "16.x" ]
+        node-version: [ 12.x, 14.x, 16.x ]
+        os: [ ubuntu-latest, windows-latest, macOS-latest ]
+    runs-on: ${{ matrix.os }}
     steps:
       - name: ⬇️ Checkout
         id: checkout
@@ -37,41 +39,21 @@ jobs:
         id: build-the-lib
         run: yarn build
 
-      - name: 🔆 Cache NPM directory
-        id: cache-npm-modules
-        uses: actions/cache@v2
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
-
-  release:
-    name: 📦 Release
-    if: ${{ github.ref == 'refs/heads/main' }}
-    needs: [ build ]
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [ "12.x" ]
-    steps:
-      - name: ⬇️ Checkout
-        id: checkout
-        uses: actions/checkout@v2.3.3
-
-      - name: 🛠️ Bootstrap Dependencies
-        id: bootstrap-dependencies-with-cache
-        run: yarn install --immutable --immutable-cache --check-cache
-
-      - name: 🏗️ Build
-        id: build-the-lib
-        run: yarn build
-
       - name: Release & Publish
         id: release-and-publish
         run: npm run semantic-release
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: 🐱 Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      - uses: actions/cache@v3
+        id: yarn-cache
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
