ci(github): ignore node engines

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
         id: bootstrap-dependencies-with-cache
         run: |
           npm install -g yarn
-          yarn install --immutable --immutable-cache --check-cache
+          yarn install --immutable --immutable-cache --check-cache --ignore-engines
 
       - name: 🏗️ Build
         id: build-the-lib
