--- a/.releaserc
+++ b/.releaserc
@@ -3,6 +3,7 @@
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
+    "@semantic-release/npm",
     [
       "@semantic-release/changelog",
       {
@@ -10,9 +11,23 @@
       }
     ],
     [
+      "@semantic-release/github", {
+        "assets": [
+          {"path": "dist/**", "label": "Distribution"},
+          { "path": "README.md", "label": "README" },
+          { "path": "CHANGELOG.md", "label": "CHANGELOG"}
+        ]
+      }
+    ],
+    [
       "@semantic-release/git",
       {
-        "assets": ["CHANGELOG.md"]
+        "assets": [
+          "dist",
+          "CHANGELOG.md",
+          "package.json"
+        ],
+        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ]
   ]
